--- a/page1.html
+++ b/page1.html
@@ -387,7 +387,12 @@
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   
   <link rel="stylesheet" type="text/css" href="css/hpStyle.css">
-  
+  <style type="text/css">
+    .page-landing{
+      display: block
+    }
+    
+  </style>
 </body>
 
 </html>
