--- a/page3.html
+++ b/page3.html
@@ -387,7 +387,11 @@
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   
   <link rel="stylesheet" type="text/css" href="css/hpStyle.css">
-  
+  <style type="text/css">
+    .page-collage{
+      display: block;
+    }
+  </style>
 </body>
 
 </html>
