--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="input-group mt-5 mb-3">
         <input type="text" class="form-control py-4" placeholder="Enter Mobile Number" aria-label="Recipient's username" aria-describedby="basic-addon2">
         <div class="input-group-append">
-          <span class="input-group-text get-started" id="basic-addon2">GET STARTED</span>
+          <span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal">GET STARTED</span>
         </div>
       </div>
       <p class="wont-spam">We promise we won’t spam you.</p>
@@ -196,10 +196,10 @@
 
 
 <!--WINNER partiton -->
-<div class="container main-area register mt-5 page-winner mb-5">
+<div class="container mt-5 page-winner mb-5">
   <div class="row center-border pt-5 chance-to-visit pb-5">  
     <div class="col">
-      <h1 class="page-title">
+      <h1>
           400 ECHO DOTS<br/>
           HAVE BEEN WON<br/>
           TILL NOW!
@@ -214,7 +214,7 @@
       </button>      
     </div>
     <div class="col">
-        <img src="img/echo-dots.png">
+        <img class="w-75 h-100" src="img/echo-dots.png">
     </div>
 
   </div>
@@ -246,34 +246,34 @@
 <div class="row">
   <div class="col-md-4">
      <img class="w-75" src="img/banner.png">
-     <div class="winner-name">Mr. Pankaj Kumar</div>
+     <div class="winner-name mt-4">Mr. Pankaj Kumar</div>
      <div class="winner-title"> Patna Affordable & Clean Energy</div>
   </div>
   <div class="col-md-4">
      <img class="w-75" src="img/banner.png">
-     <div class="winner-name">Mr. Pankaj Kumar</div>
+     <div class="winner-name mt-4">Mr. Pankaj Kumar</div>
      <div class="winner-title"> Patna Affordable & Clean Energy</div>
   </div>
   <div class="col-md-4">
      <img class="w-75" src="img/banner.png">
-     <div class="winner-name">Mr. Pankaj Kumar</div>
+     <div class="winner-name mt-4">Mr. Pankaj Kumar</div>
      <div class="winner-title"> Patna Affordable & Clean Energy</div>
   </div>
 </div>
 <div class="row mt-5">
   <div class="col-md-4">
      <img class="w-75" src="img/banner.png">
-     <div class="winner-name">Mr. Pankaj Kumar</div>
+     <div class="winner-name mt-4">Mr. Pankaj Kumar</div>
      <div class="winner-title"> Patna Affordable & Clean Energy</div>
   </div>
   <div class="col-md-4">
      <img class="w-75" src="img/banner.png">
-     <div class="winner-name">Mr. Pankaj Kumar</div>
+     <div class="winner-name mt-4">Mr. Pankaj Kumar</div>
      <div class="winner-title"> Patna Affordable & Clean Energy</div>
   </div>
   <div class="col-md-4">
      <img class="w-75" src="img/banner.png">
-     <div class="winner-name">Mr. Pankaj Kumar</div>
+     <div class="winner-name mt-4">Mr. Pankaj Kumar</div>
      <div class="winner-title"> Patna Affordable & Clean Energy</div>
   </div>
 </div>
@@ -309,40 +309,85 @@
 <!--end WINNER partiton -->
 
 
+<!-- end collage1 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- --> 
 
 
+<!-- collage3 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+<!--WINNER partiton -->
+<div class="container register mt-5 page-collage mb-5">
+  <div class="row">
+    <div class="mx-auto col-md-4">
+    <h4 class="page-title text-white text-center">
+          Welcome Vikas
+      </h4>
+    </div>
+  </div>
+  <div class="row center-border pt-5 pb-5 ">      
+    <div class="mx-auto col-md-6 collage-card ">      
+      <h4 class="mt-4 text-center px-5 py-3 text-hp-green">
+        Your uploaded invoice has been approved. You can now upload your collage. </h4>
+      <div class="input-group mx-auto w-75 mt-4">
+        <input type="text" class="form-control py-2" placeholder="Select a file or drop your collage image" aria-label="email" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <span class="input-group-text text-hp-blue" id="basic-addon2">Browse</span>
+        </div>
+      </div>  
+      <p class="text-center text-hp-blue mt-4">or <br/> <span class="icon-camera">Take a picture</span></p>
+      <ul class="text-center list-unstyled">
+        <li >* Please upload a clear picture of the collage here.</li>
+        <li >* Once uploaded you will not be able to change your entry.</li>
+        <li >* Please confirm your uploaded image after clicking on upload</li>
+      </ul>
+      <div class="text-center mt-4">
+        <button type="submit" class="btn btn-submit w-75 ">UPLOAD COLLAGE</button>  
+      </div>      
+    </div>
+  </div>
+</div>
+<!--end WINNER partiton -->
 
-<!-- end collage page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+<!-- end collage3 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+
+
 
 <!-- Modal -->
-<!-- <div id="getStartedModal" class="modal fade " role="dialog">
+ <div id="getStartedModal" class="modal fade " role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Terms and Condition</h4>
+        <img src="img/favicon.png" class="modal-head-icon" >         
       </div>
       <div class="modal-body">
-          <form action="/action_page.php">
-        <div class="row justify-content-md-center gray-t">
-            <div class="col-md-7 mb-5 mt-2 text-center"> <h6>We need to a few details to get started </h6></div>
-            <div class="col-md-7">
-            <div class="form-group">        
+        <form action="/action_page.php">
+        <div class="w-75 mx-auto justify-content-md-center gray-t">
+            <div class="mb-5 mt-2 text-center"> <h6 class="font-weight-bold">We need to a few details to get started </h6></div>
+            <div class="">
+            <div class="form-group">
+             <label for="exampleInputEmail1">Mobile number</label>        
               <input type="text" class="form-control" id="firstname" placeholder="Enter Mobile number">
+            </div>
+            <div class="form-group mt-4">
+             <label for="exampleInputEmail1">Enter One Time Password</label>        
+              <input type="text" class="form-control" id="firstname" placeholder="One Time Password">
             </div>
             </div>
            
-            <div class="col-md-7 mt-4 text-center">
+            <div class="mt-4 text-center mt-3">
               <div class="form-group">
-                <button type="submit" class="btn btn-submit w-100">Submit</button>
+                <button type="submit" class="btn btn-submit w-100">Login</button>
                </div>
-            </div>  
+            </div> 
+
+            <div class="error-msg"> 
+                Error messages goes here
+            </div>   
         </div>
        </form>
       </div>      
     </div>
   </div>
-</div> -->
+</div> 
 <!-- end Modal -->
 
 
@@ -362,7 +407,7 @@
         <div class="input-group mt-2 mb-3">
             <input type="text" class="form-control py-4" placeholder="Enter your email address" aria-label="email" aria-describedby="basic-addon2">
             <div class="input-group-append">
-              <span class="input-group-text get-started" id="basic-addon2">SUBSCRIBE NOW</span>
+              <span class="input-group-text text-hp-blue" id="basic-addon2">SUBSCRIBE NOW</span>
             </div>
           </div>
       </div>
