--- a/index.html
+++ b/index.html
@@ -82,6 +82,32 @@
   </div>
 </div>
 
+
+<!--contest partiton -->
+<div class="container main-area register page-landing mt-4">
+  <div class="row center-border pt-3 chance-to-visit pb-1">  
+    <div class="col">
+      <h2 class="page-title">THANKS FOR <br/> PARTICIPATION! </h2>
+      <p class="mt-4 ">1000 ECHO DOTS WON <br/>
+         3 ALL EXPENSE PAID NASA TRIPS WON </p>
+      
+      <div class="form-group mt-5">
+            <button type="submit" class="btn btn-submit">CHECK TOP 3 WINNERS</button>
+           </div>
+    </div>
+    <div class="col top-img-col">
+        <img class="h-75" src="img/banner.png">
+    </div>    
+  </div>
+  <div class="row mx-auto next-arrow ">  
+    <div class="col text-center">  
+        <img src="img/favicon.png">
+    </div>        
+  </div>
+</div>
+
+ <!-- end contest partition -->
+
  <!-- end first partition -->
 
 </div>
@@ -357,6 +383,51 @@
 <!-- end collage2 && collage3 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
 
+<!-- collage4 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+
+<!--success partiton -->
+<div class="container register mt-5 page-collage mb-5 collage4">
+  <div class="row">
+    <div class="mx-auto col-md-4">
+    <h4 class="page-title text-white text-center">
+          Welcome Vikas
+      </h4>
+    </div>
+  </div>
+  <div class="row center-border collage-card pt-5 pb-5 ">      
+      <div class="col-md-6 "> <img class="w-100 h-100" src="img/collage-sample.png"></div>
+      <div class="col-md-6  px-5"> 
+        <form>  
+            <div class="form-group">
+             <label for="exampleInputEmail1">Give your collage a title*</label>        
+              <input type="text" class="form-control" id="firstname" placeholder="Enter title here">
+            </div>
+            <div class="form-group mt-5">
+             <label for="exampleInputEmail1">Enter some description about your collage</label>        
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Enter description here (optional)"></textarea>
+            </div>
+              
+        </form>
+        <div class="mt-5"> 
+        <button type="button" class=" w-100 btn btn-primary" >
+            CONFIRM SUBMISSION
+          </button>
+        </div>
+        <div class="mt-3 text-center hp-h5"> 
+            <a href=" ">Go back to upload</a>
+        </div>
+    </div>
+  </div>
+</div>
+<!--end upload success partiton -->
+
+
+
+<!-- end collage4 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+
+
+
+
 <!-- collage5 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
 <!--upload success partiton -->
@@ -369,7 +440,7 @@
     </div>
   </div>
   <div class="row center-border collage-card pt-5 pb-5 ">      
-      <div class="col-md-6 "> <img class="w-100" src="img/collage-sample.png"></div>
+      <div class="col-md-6 "> <img class="w-100 h-100" src="img/collage-sample.png"></div>
       <div class="col-md-6  px-4"> 
         <div class="hp-h4 text-hp-green"> You have successfully uploaded your collage. Keep a check on winners page to see the winners.</div>
         <div class="mt-4 hp-h4 font-weight-bold">Collage title here </div>  
