--- a/index-minify.html
+++ b/index-minify.html
@@ -82,29 +82,7 @@
 				</div>
 			</div>
 		</div>
-		<!--contest partiton -->
-		<!-- <div class="container main-area register page-landing mt-4">
-			<div class="row center-border pt-3 chance-to-visit pb-1">
-				<div class="col">
-					<h2 class="page-title">THANKS FOR <br/> PARTICIPATION! </h2>
-					<p class="mt-4 ">1000 ECHO DOTS WON
-						<br/>3 ALL EXPENSE PAID NASA TRIPS WON</p>
-					<div class="form-group mt-5">
-						<button type="submit" class="btn btn-submit">CHECK TOP 3 WINNERS</button>
-					</div>
-				</div>
-				<div class="col top-img-col">
-					<img class="h-75" src="img/banner.png" />
-				</div>
-			</div>
-			<div class="row mx-auto next-arrow ">
-				<div class="col text-center">
-					<img src="img/favicon.png" />
-				</div>
-			</div>
-		</div> -->
-		<!-- end contest partition -->
-		<!-- end first partition -->
+		
 	</div>
 	<!--thanks for participation partiton -->
 	<div id="elementtoScrollToID" class="container  main-area my-5 page-landing">
@@ -766,10 +744,20 @@
 	<section class="footer-section py-4 px-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<div class="hp-h3 text-white ">Subscribe to HP offers and programs</div>
-					<p class="hp-h5 text-uppercase">We promise we won’t spam you</p>
+				<div class="col-md-6">
+					<div class="hp-h3 text-white ">
+						Subscribe to HP offers and programs <br/>
+						<p class="hp-h5 text-uppercase">We promise we won’t spam you</p>
+					</div>
 				</div>
+				<div class="col-md-6 hp-h5">
+					<div class=" text-white float-right">
+						If you haven’t bought your Original HP ink Cartridge  <br/>
+						<p class="text-uppercase">Call us at: 1800-300-4538</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-6">
 					<div class="input-group mt-2 mb-3">
 						<input type="text" class="form-control py-4" placeholder="Enter your email address" aria-label="email" aria-describedby="basic-addon2">
