--- a/index-minify.html
+++ b/index-minify.html
@@ -773,7 +773,7 @@
 						<a class="pl-3" href="">Privacy & Terms</a>
 						<a class="pl-3" href="">Contact Us</a>
 					</div>
-					<div class="col-md-6 pl-5 mx-auto justify-content-md-center"> <a href="">Share this contest on:</a>
+					<div class="col-md-6"> <a href="">Share this contest on:</a>
 						<div class="share-icons d-inline-block ml-2">
 							<a class="ml-2">
 								<img src="img/fb.png" />
