--- a/index-minify.html
+++ b/index-minify.html
@@ -23,7 +23,10 @@
 				<!-- Navbar -->
 				<img src="img/icon/icon.png" class="d-inline-block align-top" alt="" />
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"> 
+				<span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav ml-auto">
@@ -47,6 +50,19 @@
   ------------------------------------------------- !-->
 		<!--first partiton -->
 		<div class="container main-area register page-landing mt-5">
+			<div class="row" style="white-space: nowrap;">
+				<div class="col-md-12">
+					<div class="input-group-append " style="white-space: nowrap;">
+					    <span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal1">GET STARTED 1</span>
+						<span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal2">GET STARTED 2</span>
+						 
+					</div>
+					<div class="input-group-append " style="white-space: nowrap;">					    
+						<span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal3">GET STARTED 3</span>
+						<span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal4">GET STARTED 4</span> 
+					</div>
+				</div>
+			</div>
 			<div class="row center-border pt-3 chance-to-visit pb-1">
 				<div class="col-md-6">
 					<h2 class="page-title">GET A CHANCE TO TAKE YOUR CHILD TO A U.S.
@@ -60,22 +76,10 @@
 					<p class="wont-spam">We promise we won’t spam you.</p>
 				</div>
 				<div class="col-md-6 top-img-col  mx-auto justify-content-md-center">
-					<img class="" src="img/banner.png" />
+					<img class="img-fluid" src="img/banner.png" />
 				</div>
 			</div>
-			<div class="row" style="position: absolute;top:0;white-space: nowrap;">
-				<div class="col-md-12">
-					<div class="input-group-append " style="white-space: nowrap;">
-					    <span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal1">GET STARTED 1</span>
-						<span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal2">GET STARTED 2</span>
-						 
-					</div>
-					<div class="input-group-append " style="white-space: nowrap;">					    
-						<span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal3">GET STARTED 3</span>
-						<span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal4">GET STARTED 4</span> 
-					</div>
-				</div>
-			</div>
+			
 			<div class="row mx-auto next-arrow ">
 				<div class="col text-center parent">
 					<img src="img/circle-arrow.png" />
@@ -105,49 +109,15 @@
 						</p>
 
 					</div>
-					<div class="col-md-7">
-						<div class="row mb-3">
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme1.png" />
-							</div>
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme2.png" />
-							</div>
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme3.png" />
-							</div>
-						</div>
-
-						<div class="row mb-3">
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme4.png" />
-							</div>
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme5.png" />
-							</div>
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme6.png" />
-							</div>
-						</div>
-
-						<div class="row mb-3">
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme7.png" />
-							</div>
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme8.png" />
-							</div>
-							<div class="col-md-4 text-center">
-								<img class="mx-auto d-block w-75" src="img/theme9.png" />
-							</div>
-						</div>
+					<div class="col-md-7 px-4 mx-auto justify-content-md-center">
+						<img class="img-fluid" src="img/themes.png">						
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12 mt-5 text-center">
-						<div class="form-group">
+						<div class="form-group ">
 							<button type="submit" class="btn btn-submit">SEE ALL IMAGES FOR CREATING COLLAGE</button>
-						</div>
+						</div>						
 					</div>
 				</div>
 			</div>
@@ -163,13 +133,13 @@
 			<div class="col-md-12 mt-5 mb-5">
 				<div class="row">
 					<div class="col-md-6 px-5 text-center">						
-						<img class="w-75 h-50 mb-3" src="img/space-shuttle.png">
+						<img class="img-fluid mb-3" src="img/space-shuttle.png">
 						<div class="hp-h4">Trip to Space Centre, USA</div>
 						<div class="hp-h5 text-hp-gray mt-3">Top 3 Winners with the best collage will get <br/> a full-expense paid trip to Space Centre, USA</div>
 					</div>
 
 					<div class="col-md-6 px-5 text-center">
-						<img class="w-75 h-50 mb-3" src="img/echo-dots.png">
+						<img class="img-fluid mb-3" src="img/echo-dots.png">
 						<div class="hp-h4">Trip to Space Centre, USA</div>
 						<div class="hp-h5 text-hp-gray mt-3">Every week, 100 valid collage entries will be picked <br/>
 						to receive Amazon Echo Dot. 1000 winners <br/>
@@ -225,8 +195,8 @@
 				</div>
 				</button>
 			</div>
-			<div class="col-md-4  mx-auto justify-content-md-center">
-				<img class="w-75 h-100" src="img/echo-dots.png" />
+			<div class="col-md-4 px-5 mx-auto justify-content-md-center">
+				<img class="img-fluid" src="img/echo-dots.png" />
 			</div>
 		</div>
 	</div>
@@ -759,11 +729,18 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<div class="input-group mt-2 mb-3">
-						<input type="text" class="form-control py-4" placeholder="Enter your email address" aria-label="email" aria-describedby="basic-addon2">
-						<div class="input-group-append"> <span class="input-group-text text-hp-blue" id="basic-addon2">SUBSCRIBE NOW</span>
+					<div class="form-group mt-2 mb-3 d-md-block ">
+						<div class="input-group">
+							<input type="text" class="form-control py-4" placeholder="Enter your email address" aria-label="email" aria-describedby="basic-addon2">
+							<div class="input-group-append"> <span class="input-group-text text-hp-blue" id="basic-addon2">SUBSCRIBE NOW</span>
+							</div>
 						</div>
 					</div>
+
+					<div class="form-group mt-2 mb-3  d-sm-block">	
+							<input type="text" class="form-control" id="SUBSCRIBE NOW" placeholder="SUBSCRIBE NOW">
+							<button type="submit" class="btn btn-submit mt-4">SUBSCRIBE NOW</button>
+						</div>
 				</div>
 			</div>
 			<!-- Footer -->
