--- a/index-minify.html
+++ b/index-minify.html
@@ -737,7 +737,7 @@
 						</div>
 					</div>
 
-					<div class="form-group mt-2 mb-3  d-sm-block">	
+					<div class="form-group mt-2 mb-3  d-sm-block text-center">	
 							<input type="text" class="form-control" id="SUBSCRIBE NOW" placeholder="SUBSCRIBE NOW">
 							<button type="submit" class="btn btn-submit mt-4">SUBSCRIBE NOW</button>
 						</div>
