--- a/index-minify.html
+++ b/index-minify.html
@@ -29,19 +29,17 @@
 			    <span class="icon-bar"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto">
-					<div class="pull-right">
-						<li class="nav-item float-right"> <a class="nav-link" href="#">LOGIN</a>
+				<ul class="navbar-nav ml-auto">											
+						<li class="nav-item  "> <a class="nav-link selected" href="#">Winning Entries</a>
 						</li>
-						<li class="nav-item float-right"> <a class="nav-link" href="#">Terms</a>
+						<li class="nav-item "> <a class="nav-link" href="#">Download images</a>
 						</li>
-						<li class="nav-item float-right"> <a class="nav-link" href="#">FAQs</a>
 						</li>
-						<li class="nav-item float-right"> <a class="nav-link" href="#">Download images</a>
+						<li class="nav-item "> <a class="nav-link" href="#">FAQs</a>
 						</li>
-						<li class="nav-item float-right "> <a class="nav-link selected" href="#">Winning Entries</a>
+						<li class="nav-item "> <a class="nav-link" href="#">Terms</a>
+							<li class="nav-item "> <a class="nav-link" href="#">LOGIN</a>
 						</li>
-					</div>
 				</ul>
 			</div>
 		</nav>
@@ -73,7 +71,7 @@
 						<div class="input-group-append"> <span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal1">GET STARTED </span>
 						</div>
 					</div>
-					<p class="wont-spam">We promise we won’t spam you.</p>
+					<p class="wont-spam">Here is a link to our <a href="" class="text-white">Privacy Policy</a></p>
 				</div>
 				<div class="col-md-6 top-img-col  mx-auto justify-content-md-center">
 					<img class="img-fluid" src="img/banner.png" />
