--- a/index-minify.html
+++ b/index-minify.html
@@ -395,7 +395,7 @@
 					</div>
 				</div>
 				<div class="modal-body">
-					<form action="/action_page.php">
+					<form >
 						<div class="w-75 mx-auto justify-content-md-center gray-t">
 							<div class="mb-5 mt-2 text-center">
 								<h6 class="font-weight-bold">We need to a few details to get started </h6>
@@ -430,7 +430,7 @@
 					</div>
 				</div>
 				<div class="modal-body">
-					<form action="/action_page.php">
+					<form >
 						<div class="w-75 mx-auto justify-content-md-center gray-t">
 							<div class="mb-5 mt-2 text-center">
 								<h6 class="font-weight-bold">We need to a few details to get started </h6>
@@ -469,7 +469,7 @@
 					</div>
 				</div>
 				<div class="modal-body">
-					<form action="/action_page.php">
+					<form >
 						<div class="w-75 mx-auto justify-content-md-center gray-t">
 							<div class="mb-5 mt-2 text-center">
 								<h6 class="font-weight-bold">We need to a few details to get started </h6>
