--- a/index-minify.html
+++ b/index-minify.html
@@ -388,8 +388,8 @@
 	<div id="getStartedModal1" class="modal fade " role="dialog">
 		<div class="modal-dialog hp-modal-sm">
 			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<button type="button" class="close" data-dismiss="modal"></button>
+				<div class="modal-header">					
 					<div class="row mx-auto">
 						<img src="img/favicon.png" />
 					</div>
@@ -423,8 +423,8 @@
 	<div id="getStartedModal2" class="modal fade " role="dialog">
 		<div class="modal-dialog hp-modal-sm">
 			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<button type="button" class="close" data-dismiss="modal"></button>
+				<div class="modal-header">					
 					<div class="row mx-auto">
 						<img src="img/favicon.png">
 					</div>
@@ -462,8 +462,8 @@
 	<div id="getStartedModal3" class="modal fade " role="dialog">
 		<div class="modal-dialog hp-modal-sm">
 			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal"></button>
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
 					<div class="row mx-auto">
 						<img src="img/favicon.png" />
 					</div>
@@ -507,8 +507,8 @@
 	<div id="getStartedModal4" class="modal fade " role="dialog">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
+				<button type="button" class="close" data-dismiss="modal"></button>
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
 					<div class="row mx-auto">
 						<img src="img/favicon.png" />
 					</div>
@@ -560,52 +560,25 @@
 			<div class="col-md-12">
 				<div class="row px-5">
 					<div class="col-md-3 text-center img-card">
-						<img class="w-100" src="img/theme1.png" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg" data-toggle="modal" data-target="#lightbox">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
-						<div class="hp-input-group-text">
-					      <input type="checkbox" aria-label="Checkbox for following text input">
-					    </div>
-					</div>
-				</div>
-
-				<div class="row px-5 mt-4">
-					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
-						<div class="hp-input-group-text">
-					      <input type="checkbox" aria-label="Checkbox for following text input">
-					    </div>
-					</div>
-					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
-						<div class="hp-input-group-text">
-					      <input type="checkbox" aria-label="Checkbox for following text input">
-					    </div>
-					</div>
-					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
-						<div class="hp-input-group-text">
-					      <input type="checkbox" aria-label="Checkbox for following text input">
-					    </div>
-					</div>
-					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
@@ -614,25 +587,25 @@
 
 				<div class="row px-5 mt-4">
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
@@ -641,25 +614,52 @@
 
 				<div class="row px-5 mt-4">
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
 					</div>
 					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
-						<img class="w-100" src="img/theme1.png">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+					      <input type="checkbox" aria-label="Checkbox for following text input">
+					    </div>
+					</div>
+				</div>
+
+				<div class="row px-5 mt-4">
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+					      <input type="checkbox" aria-label="Checkbox for following text input">
+					    </div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+					      <input type="checkbox" aria-label="Checkbox for following text input">
+					    </div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+					      <input type="checkbox" aria-label="Checkbox for following text input">
+					    </div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
 						<div class="hp-input-group-text">
 					      <input type="checkbox" aria-label="Checkbox for following text input">
 					    </div>
@@ -673,20 +673,20 @@
 	 <div class="modal fade carousal-modal" id="lightbox">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-body">
-          
+      	<button type="button" class="close" data-dismiss="modal"></button>
+        <div class="modal-body">          
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		  
 		  <div class="carousel-inner">
 		    <div class="carousel-item active">
-		      <img class="d-block" src="img/theme1.png" alt="First slide">
+		      <img class="d-block" src="img/gallery1.jpg" alt="First slide">
 		    </div>
 		    <div class="carousel-item">
-		      <img class="d-block"  src="img/theme2.png" alt="Second slide">
+		      <img class="d-block"  src="img/gallery2.jpg" alt="Second slide">
 		    </div>
 		    <div class="carousel-item">
-		      <img class="d-block"  src="img/theme3.png" alt="Third slide">
+		      <img class="d-block"  src="img/gallery3.jpg" alt="Third slide">
 		    </div>
 		  </div>
 		  <div class="row mx-auto mt-3">
